# snapms

./: .gitignore  Dockerfile  Dockerfile.cytoscape  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  execute.py  manage.py  pyproject.toml  setup.py
snapms/: __init__.py  config.py  core.py  exceptions.py
snapms/atlas_tools/: atlas_import.py
snapms/matching_tools/: CompoundMatch.py  data_import.py  mass_list.py  match_compounds.py
snapms/network_tools/: create_networks.py  cytoscape.py
snapms/tests/atlas_tools/: test_atlas.json  test_atlas_import.py
snapms/tests/matching_tools/: test_CompoundMatch.py  test_mass_list.py  test_match_compounds.py
snapms/tests/network_tools/: test_create_networks.py  test_cytoscape.py  test_session.cys  test_snapms.graphml
snapms_site/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
snapms_site/snapms/: apps.py  models.py  tasks.py  tests.py  urls.py  views.py
snapms_site/snapms/migrations/: 0001_initial.py  0002_alter_job_id.py
snapms_site/snapms/templates/: dashboard.html  docs.html  output.html  simple_template.html
snapms_site/static/css/: styles.css
snapms_site/templates/: base.html
