[tool.poetry]
name = "snapms"
version = "1.1.0"
description = ""
authors = ["jvansan <jeffreyavansanten@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rdkit = "^2022.3.4"
numpy = "^1.23.1"
pandas = "^1.4.3"
networkx = "^2.8.5"
scipy = "^1.8.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
Django = "^4.0.6"
django-rq = "^2.5.1"
responses = "^0.21.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
