[tool.poetry]
name = "snapms"
version = "1.2.2"
description = ""
authors = ["jvansan <jeffreyavansanten@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rdkit = "^2023.9.4"
numpy = "^1.23.1"
pandas = "^1.4.3"
networkx = "^2.8.5"
scipy = "^1.8.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
responses = "^0.22.0"
deepdiff = "^6.2.3"


[tool.poetry.group.site.dependencies]
django = "^4.1.7"
django-rq = "^2.7.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
